# C_Algorithms_Datastructures

./: README.md
class_exercises/: ex1.c  ex11_5  ex11_5.c  ex2  ex2.c  ex2.py  ex3  ex3.c  ex4.c
cs50/: ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  ex4  ex4.c
extras/: armstrong.c  c1  c1.c  c1file  c2  c2.c  ex1  ex1.c  guessing_game  guessing_game.c  guseeing_game.py
lab10/: CMakeLists.txt  StackLibrary.zipZone.Identifier  client.c
lab10/lib_item/: item-int.c  item.h
lab10/lib_stack/: CMakeLists.txt  stack.c  stack.h  stack_private.h
lab2/: p1  p1.c  p2  p2.c
lab3/: 1_1A  1_1A.c  1_1B  1_1B.c  1_1C  1_1C.c  1_1D  1_1D.c  1_1E  1_1E.c  1_2  1_2.c  2_1  2_1.c  alphabet.inZone.Identifier  output.out  p1  try1  try1.c
lab4/: 16.inZone.Identifier  4.inZone.Identifier  ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  output.out
lab5/: cyclist.txtZone.Identifier  ex1  ex1.c  ex2  ex2.c  ex3.c  rectangles.inZone.Identifier
lab6/: data_header.csv  ex1  ex1.c  ex2  ex2.c  out.csv  student  student_record_management_system.c  student_records_management_system.h
lab7/: ex1  ex2.c  ex3  ex3.c  in.txt  in.txtZone.Identifier  task_manager.c  task_manager.h
lab8/: ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  ex4  ex4.c  ex5  ex5.c
lab9/: det.out  ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  racing.txt  racing.txtZone.Identifier
recursion/: ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  power  power.c
sorting/: bubble  bubble.c  selection  selection.c
